--- a/InvoiceWebApp/Pages/Index.cshtml
+++ b/InvoiceWebApp/Pages/Index.cshtml
@@ -7,5 +7,6 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Invoice Maker is a simple web application that allows you to create invoices and quotes.</p>
+    <p>Current Time: @DateTime.Now.Hour:@DateTime.Now.Minute</p>
     <p><a class="btn btn-primary" asp-page="/Create">Create new invoice or quote</a></p>
 </div>
